[package]
name = "heimdall"
version = "0.1.0"
authors = ["Patricio Napoli <pnapoli@geminis.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
hyper = "0.13.5"
tokio = { version = "0.2.21", features = ["full"] }
tokio-util = "0.3.1"
futures = "0.3.5"
log = "0.4.8"
derive_more = "0.99.7"
chrono = "0.4.11"
dashmap = "3.11.1"
redis = "0.16.0"
json = "0.12.4"
envy = "0.4.1"
mime = "0.3.14"
mime_guess = "2.0.1"
serde = { version = "1.0.110", features = ["derive"] }
argonautica = { version = "0.2", features = ["simd"] }
simd-json = "0.3.9"
sentry = "0.12.0"
prometheus = "0.8.0"
reql = "0.0.27"
tracing = "0.1"
tracing-subscriber = "0.2.4"
tera = "1.2.0"
rand = "0.7.3"
lazy_static = "1.4.0"
glob = "0.3.0"
regex = "1.3.7"
http = "0.2.1"
url = "2.1.1"
